# MelodyExtraction

./: .gitignore  BaNaDetection.c  BaNaDetection.h  CMakeLists.txt  HPSDetection.c  HPSDetection.h  Makefile  README.md  SilenceDetection.c  candidateSelection.c  candidateSelection.h  candidates.c  candidates.h  comparison  comparison.c  comparison.h  comparison_example_usage.c  contributors.txt  detectionStrat.c  detectionStrat.h  extract  fVADsd.c  fVADsd.h  filterBank.c  filterBank.h  findCandidates.c  findCandidates.h  findpeaks.c  findpeaks.h  gammatoneFilter.c  gammatoneFilter.h  lists.c  lists.h  main.c  melodyextraction.c  melodyextraction.h  midi.c  midi.h  noteCompilation.c  noteCompilation.h  (+18 more)
cmake/: FindCheck.cmake  FindFFTW3.cmake  FindFVAD.cmake  FindSamplerate.cmake  FindSndFile.cmake  IdentifyPath.cmake  config.h.in
convenience/: figure_reproduce.py  test_plot.py  test_save.py
doc/: doxyfile.config
fftw-3.3.4/: Makefile  Makefile.in  config.h  config.status  configure  libfftw3.la  libtool
fftw-3.3.4/.libs/: libfftw3.la  libfftw3.lai
fftw-3.3.4/api/: Makefile  Makefile.in
fftw-3.3.4/api/.deps/: apiplan.Plo  configure.Plo  execute-dft-c2r.Plo  execute-dft-r2c.Plo  execute-dft.Plo  execute-r2r.Plo  execute-split-dft-c2r.Plo  execute-split-dft-r2c.Plo  execute-split-dft.Plo  execute.Plo  export-wisdom-to-file.Plo  export-wisdom-to-string.Plo  (+54 more)
fftw-3.3.4/autom4te.cache/: output.1  requests  traces.0  traces.1
fftw-3.3.4/dft/: Makefile  Makefile.in
fftw-3.3.4/doc/: Makefile  Makefile.in  fftw3.info  fftw3.info-1  fftw3.info-2
fftw-3.3.4/genfft/: Makefile  Makefile.in
fftw-3.3.4/kernel/: Makefile  Makefile.in
fftw-3.3.4/libbench2/: Makefile  Makefile.in
fftw-3.3.4/m4/: Makefile  Makefile.in
fftw-3.3.4/mpi/: Makefile  Makefile.in
fftw-3.3.4/rdft/: Makefile  Makefile.in
fftw-3.3.4/reodft/: Makefile  Makefile.in
fftw-3.3.4/simd-support/: Makefile  Makefile.in
fftw-3.3.4/support/: Makefile  Makefile.in
fftw-3.3.4/tests/: Makefile  Makefile.in  bench
fftw-3.3.4/threads/: Makefile  Makefile.in
fftw-3.3.4/tools/: Makefile  Makefile.in  fftw-wisdom
libsndfile-1.0.26/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool
libsndfile-1.0.26/M4/: Makefile  Makefile.in
libsndfile-1.0.26/Octave/: Makefile  Makefile.in
libsndfile-1.0.26/Scripts/: build-test-tarball.mk
libsndfile-1.0.26/Win32/: Makefile  Makefile.in
libsndfile-1.0.26/autom4te.cache/: output.1  requests  traces.0  traces.1
libsndfile-1.0.26/doc/: Makefile  Makefile.in
libsndfile-1.0.26/examples/: Makefile  Makefile.in  generate  list_formats  make_sine  sfprocess  sndfile-loopify  sndfile-to-text  sndfilehandle
libsndfile-1.0.26/man/: Makefile  Makefile.in  sndfile-deinterleave.1  sndfile-metadata-set.1
libsndfile-1.0.26/programs/: Makefile  Makefile.in  sndfile-cmp  sndfile-concat  sndfile-convert  sndfile-deinterleave  sndfile-info  sndfile-interleave  sndfile-metadata-get  sndfile-metadata-set  sndfile-play  sndfile-salvage
libsndfile-1.0.26/regtest/: Makefile  Makefile.in  sndfile-regtest
libsndfile-1.0.26/src/: Makefile  Makefile.in  config.h  libcommon.la  libsndfile.la
libsndfile-1.0.26/tests/: Makefile  Makefile.in  pedantic-header-test.sh  test_wrapper.sh
licenses/: CHECK_TUTORIAL_CMAKELIST_LICENSE  README.md
pymelex/: README.md  setup.py
pymelex/pymelex/: BaNa_pitch.py  FixedTypeList.py  IntList.py  __init__.py  extract_pitch.py  misc.py  pairwise_transients.py  resample.py  shared_lib.py
pymelex/tests/: test_IntList.py  test_resample.py
src/: BaNaDetection.c  BaNaDetection.h  CMakeLists.txt  HPSDetection.c  HPSDetection.h  Makefile  candidateSelection.c  candidateSelection.h  comparison.c  comparison.h  detFuncCore.c  detFuncCore.h  errors.c  errors.def  errors.h  extractMelodyProcedure.c  extractMelodyProcedure.h  fVADsd.c  fVADsd.h  fastGaussTransform.c  filterBank.c  filterBank.h  findCandidates.c  findCandidates.h  gammatoneFilter.c  gammatoneFilter.h  io_wav.c  io_wav.h  lists.c  lists.h  main.c  melodyextraction.c  melodyextraction.h  midi.c  midi.h  noteCompilation.c  noteCompilation.h  onsetStrat.c  onsetStrat.h  pitchStrat.c  (+16 more)
src/onset/: calcSummedLagCorrentrograms.c  fastGaussTransform.h  filterBank.c  filterBank.h  gammatoneFilter.c  gammatoneFilter.h  onsetStrat.c  onsetStrat.h  onsetsds.c  pairTransientDetection.c  pairTransientDetection.h  scalar_vector.h  simpleDetFunc.c  simpleDetFunc.h  sse_vector.h
src/pitch/: BaNaDetection.c  BaNaDetection.h  HPSDetection.c  HPSDetection.h  candidateSelection.c  candidateSelection.h  findCandidates.c  findCandidates.h  findpeaks.c  findpeaks.h  pitchStrat.c  pitchStrat.h
src/threading/: thpool.c  thpool.h  threadPoolInterface.c  threadPoolInterface.h
src/transient/: calcDetFunc.c  calcDetFunc.h  calcSummedLagCorrentrograms.c  calcSummedLagCorrentrograms.h  filterBank.h  gammatoneFilter.c  gammatoneFilter.h  onsetStrat.c  onsetStrat.h  pairTransientDetection.c  pairTransientDetection.h  rollSigma.c  rollSigma.h  selectTransients.c  selectTransients.h  simpleDetFunc.c  transient.c  transient.h  vector_scalar.h  vector_sse.h
tests/: CMakeLists.txt  check_calcSummedLagCorrentrograms.c  check_detFunction.c  check_filterBank.c  check_gammatone  check_gammatone.c  check_lists.c  check_rollSigma.c  check_sigOpt.c  check_tripleBuffer.c  check_vector.c  doubleArrayTesting.c  doubleArrayTesting.h
tests/pitch/: check_findCandidates.c  check_pitch.h  check_pitch_main.c
tests/test_files/gammatone/: simple_biquad_all_coef_result  simple_biquad_denominator_result  simple_biquad_numerator_result  simple_biquad_test_result  sos_gammatone_impulse_response  sos_gammatone_response2  sos_gammatone_staircase_response  step_function_biquad_response
tests/test_files/roll_sigma/: roll_sigma_sample_input  roll_sigma_sample_test
tests/testtools/: doubleArrayTesting.c  doubleArrayTesting.h  genSignal.c  genSignal.h  testtools.h
tests/transient/: check_calcSummedLagCorrentrograms.c  check_gammatone.c  check_rollSigma.c  check_transient.h  check_transient_main.c  check_vector.c
(+574 files in other folders)
